--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<div class="caixa-numero resultado">
 			Resultado: <span id="resultado"></span>
 		</div>
-		<button onclick="Somar()" class="botao">Somar</button>
-		<button onclick="Subtrair()" class="botao">Subtrair</button>
-		<button onclick="Multiplicar()" class="botao">Multiplicar</button>
+		<button class="botao" id="Somar" class="botao">Somar</button>
+		<button class="botao" id="Subtrair" class="botao">Subtrair</button>
+		<button class="botao" id="Multiplicar" class="botao">Multiplicar</button>
 		<button class="botao" id="Dividir" class="botao">Dividir</button>
 		<button class="botao" id="Limpar" class="botao">Limpar</button>
 
@@ -41,45 +41,62 @@
 			evento.target.style.border = '1px solid #eee'
 		})
 
-		input_html.addEventListener('keyup', function(evento) {
+		input_html.addEventListener('blur', function(evento) {
 			var entrada_usuario = evento.target.value
 			if(isNaN(entrada_usuario) || !isFinite(entrada_usuario)) {
-				evento.target.value = ' '
+				evento.target.value = ''
 		}
 		})
 	})
 
 	document.querySelector('#Limpar').addEventListener('click', function Limpar() {
-		n1.value = ' '
-		n2.value = ' '
-		tag_resultado.textContent = ' '
+		n1.value = ''
+		n2.value = ''
+		tag_resultado.textContent = ''
 	})
 
-	document.querySelector('#Dividir').addEventListener('mousemove', function Dividir() {
+	document.querySelector('#Dividir').addEventListener('click', Dividir)
+
+	document.querySelector('#Somar').addEventListener('click', Somar)
+
+	document.querySelector('#Subtrair').addEventListener('click', Subtrair)
+
+	document.querySelector('#Multiplicar').addEventListener('click', Multiplicar)
+
+	function Dividir() {
 		var resultado = parseInt(n1.value) / parseInt(n2.value)
 		if(isNaN(resultado) || !isFinite(resultado)) {
 			alert('error')
 			return
 		}
 		tag_resultado.textContent = resultado
-	})
+	}
 
 	function Somar() {
 		var resultado = parseInt(n1.value) + parseInt(n2.value)
+		if(isNaN(resultado) || !isFinite(resultado)) {
+			alert('error')
+			return
+		}
 		tag_resultado.textContent = resultado
-		return false
 	}
 
 	function Subtrair() {
 		var resultado = parseInt(n1.value) - parseInt(n2.value)
+		if(isNaN(resultado) || !isFinite(resultado)) {
+			alert('error')
+			return
+		}
 		tag_resultado.textContent = resultado
-		return false
 	}
 
 	function Multiplicar() {
 		var resultado = parseInt(n1.value) * parseInt(n2.value)
+		if(isNaN(resultado) || !isFinite(resultado)) {
+			alert('error')
+			return
+		}
 		tag_resultado.textContent = resultado
-		return false
 	}
 
 </script>
